Fixed spacing not scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind  utilities;
 
 #root {
-  height: 100lvh;
+  height: 100vh;
   width: 100%;
 }
 
@@ -17,16 +17,4 @@ input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-/* Hide scrollbar in WebKit browsers */
-::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar in Firefox */
-body {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE 10+ */
-  overflow-y: scroll; /* Ensure scrollability */
 }
